--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,7 +1,7 @@
-mode: Mainline
+mode: ContinuousDelivery
 branches:
-  master: {}
-  develop: {}
+  feature:
+    mode: ContinuousDeployment
 ignore:
   sha: []
 merge-message-formats: {}
